# Rabite-clon

./: .gitignore  LICENSE  README.md  app.py  docker-compose.yml  extensions.py  forms.py  models.py  pyproject.toml  requirements.txt  text.txt  url.py
_backup/: backup_1.sql
static/css/: campaigns.css  card-offer.css  carusel.css  deposit.css  deposit_page.css  footer.css  share_print.css
static/js/: campaigns.js  card_offer.js  credit_calculator.js  deposit.js  deposit_page.js  homepage.js  seyf.js  share_print.js
templates/: 404.html  campaigns.html  card-offer.html  deposit.html  deposit_page.html  homepage.html  layout.html  login.html  onlineque.html  register.html  seyfler.html  xeberler.html
templates/includes/: footer.html  formhelpers.html  formhelpers_.html  formhelpers_interest.html  formhelpers_login_register.html  formhelpers_money.html  formhelpers_month.html  header.html  message.html  share_and_print.html  slider.html
