[project]
name = "rabite-clon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "dnspython>=2.7.0",
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-admin>=1.6.1",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-wtf>=1.2.2",
    "jinja2>=3.1.6",
    "mako>=1.3.10",
    "mysqlclient>=2.2.7",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
    "xmltodict>=0.14.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.10",
]
